--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -1,7 +1,23 @@
 name = "KGE"
 prefix = "kge"
 author = "nikolauska"
+mainprefix = "z"
+
+[files]
+include = [
+    "mod.cpp",
+    "README.md",
+    "LICENSE",
+    "kuikka.paa",
+    "CHANGELOG.md",
+]
 
 [version]
 path = "addons/main/script_version.hpp"
 git_hash = 4
+
+[hemtt.launch]
+workshop = [
+    "450814997", # CBA_A3
+    "463939057", # ACE3
+]
